remove card, extra timeout stuff, fix blur cutoff

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -36,7 +36,7 @@ $transparent: transparent;
 [ui-view] {
   background-color: $white;
   width: 100%;
-  height: auto;
+  height: 100%;
 
   overflow-y: hidden;
 }
